--- a/module_login/build.gradle
+++ b/module_login/build.gradle
@@ -32,6 +32,7 @@ android {
 }
 
 dependencies {
+
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     api rootProject.ext.dependencies["kotlin"]
@@ -65,6 +66,7 @@ dependencies {
 
     api rootProject.ext.dependencies["arouter_api"]
     api rootProject.ext.dependencies["arouter_compiler"]
+    implementation project(path: ':module_common')
 
 //    api 'com.alibaba:arouter-api:1.5.2'
 //    api 'com.alibaba:arouter-compiler:1.5.2'
@@ -76,7 +78,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+//    implementation 'androidx.appcompat:appcompat:1.2.0'
+//    implementation 'com.google.android.material:material:1.2.1'
+//    testImplementation 'junit:junit:4.+'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
 repositories {
     mavenCentral()
