--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,6 @@ android {
     buildToolsVersion rootProject.ext.android["build_tools_version"]
 
 
-
     defaultConfig {
         //applicationId "com.qyh_practice"
         minSdkVersion rootProject.ext.android["minSdkVersion"]
@@ -41,7 +40,7 @@ android {
 
 /** Apk输出目录 */
 def getApkDir() {
-    return project.rootDir.absolutePath+File.separator+"apk"
+    return project.rootDir.absolutePath + File.separator + "apk"
     //return rootProject.getPath() + File.separator + "apk"
 }
 
@@ -49,12 +48,12 @@ def getApkDir() {
 android.applicationVariants.all { variant ->
     variant.outputs.all { output ->
         if ("release" == variant.buildType.name) {
-            def createTime=new Date().format("yyyy-MM-dd_hh-mm-ss")
+            def createTime = new Date().format("yyyy-MM-dd_hh-mm-ss")
             //variant.getPackageApplication().outputDirectory = new File(project.rootDir.absolutePath + File.separator + "outputs")
             variant.packageApplicationProvider.get().outputDirectory = new File(getApkDir())
             //qyh_practice_${版本号}_${打包日期}.apk
             //outputFileName = "funnydate_${variant.versionName}.apk"
-            outputFileName ="qyh_practice_${variant.versionName}_${createTime}.apk"
+            outputFileName = "qyh_practice_${variant.versionName}_${createTime}.apk"
         }
     }
 }
@@ -69,11 +68,11 @@ dependencies {
     api rootProject.ext.ktx["core"]
     api rootProject.ext.ktx["livedata"]
     api rootProject.ext.ktx["viewmodel"]
-    api rootProject.ext.ktx["appcompat"]
+    //api rootProject.ext.ktx["appcompat"]
 
     api rootProject.ext.dependencies["material"]
     api rootProject.ext.dependencies["constraintlayout"]
-
+    implementation project(path: ':module_common')
 
 
     testImplementation 'junit:junit:4.13.2'
@@ -88,7 +87,7 @@ dependencies {
 //    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.20"
 
 //    implementation 'androidx.core:core-ktx:1.3.1'
-//    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
 //    implementation 'com.google.android.material:material:1.2.1'
 //    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 //    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
