--- a/module_login/src/main/AndroidManifest.xml
+++ b/module_login/src/main/AndroidManifest.xml
@@ -8,8 +8,6 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Qyh_practice">
-        <activity android:name=".LoginActivity" />
-    </application>
+        android:theme="@style/Theme.Qyh_practice"></application>
 
 </manifest>
