--- a/module_common/build.gradle
+++ b/module_common/build.gradle
@@ -64,6 +64,11 @@ dependencies {
     api rootProject.ext.dependencies["rxlifecycleComponents"]
     api rootProject.ext.dependencies["rxBinding"]
 
+    api rootProject.ext.dependencies["refreshLayout"]
+    api rootProject.ext.dependencies["refreshLayout_header"]
+    //api rootProject.ext.dependencies["refreshLayout_footer"]
+
+
 
     api rootProject.ext.dependencies["arouter_api"]
     api rootProject.ext.dependencies["arouter_compiler"]
