--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,13 @@ buildscript {
 
     ext.kotlin_version = "1.5.21"
     repositories {
+        maven {url "https://maven.aliyun.com/repository/public"}
+        maven {url "https://maven.aliyun.com/repository/google"}
+
+        maven {url 'https://jitpack.io'}
+
+        maven {url "http://nexus.zhenai.com/content/groups/android-public/"}
+
         google()
         mavenCentral()
     }
@@ -20,6 +27,19 @@ buildscript {
 
 allprojects {
     repositories {
+        flatDir {
+            dirs '../depend_aar'
+        }
+        maven { url "http://mvn.gt.igexin.com/nexus/content/repositories/releases/" }
+
+        maven {url 'https://maven.aliyun.com/repository/public'}
+        maven {url "https://maven.aliyun.com/repository/google"}
+
+        maven {url 'https://jitpack.io'}
+        maven {url 'https://developer.huawei.com/repo'}
+
+        maven {url "http://nexus.zhenai.com/content/groups/android-public/"}
+
         google()
         mavenCentral()
         //jcenter() // Warning: this repository is going to shut down soon
