--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -67,6 +67,17 @@ dependencies {
     api rootProject.ext.dependencies["kotlinCoroutines"]
     api rootProject.ext.dependencies["kotlinCoroutines_core"]
 
+    implementation 'androidx.appcompat:appcompat:1.2.0'                 //必须 1.0.0 以上
+
+    implementation  'com.scwang.smart:refresh-layout-kernel:2.0.1'      //核心必须依赖
+    implementation  'com.scwang.smart:refresh-header-classics:2.0.1'    //经典刷新头
+    implementation  'com.scwang.smart:refresh-header-radar:2.0.1'       //雷达刷新头
+    implementation  'com.scwang.smart:refresh-header-falsify:2.0.1'     //虚拟刷新头
+    implementation  'com.scwang.smart:refresh-header-material:2.0.1'    //谷歌刷新头
+    implementation  'com.scwang.smart:refresh-header-two-level:2.0.1'   //二级刷新头
+    implementation  'com.scwang.smart:refresh-footer-ball:2.0.1'        //球脉冲加载
+    implementation  'com.scwang.smart:refresh-footer-classics:2.0.1'    //经典加载
+
     api rootProject.ext.ktx["core"]
     api rootProject.ext.ktx["livedata"]
     api rootProject.ext.ktx["viewmodel"]
@@ -76,19 +87,18 @@ dependencies {
     api rootProject.ext.dependencies["constraintlayout"]
 
 
-    api rootProject.ext.dependencies["refreshLayout"]
-    api rootProject.ext.dependencies["refreshLayout_header"]
 
 
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
 
     implementation 'com.android.support:multidex:1.0.3'
+
     implementation project(path: ':module_common')
     implementation project(path: ':module_login')
+    implementation project(path: ':module_recommend')
+    implementation project(path: ':module_recommend')
 
-
-    //implementation 'com.jacktuotuo.customview:verificationcodeview:1.0.5'
 
     testImplementation 'junit:junit:4.13.2'
 
@@ -104,7 +114,6 @@ dependencies {
 //    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.20"
 
 //    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
 //    implementation 'com.google.android.material:material:1.2.1'
 //    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 //    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
