--- a/module_login/build.gradle
+++ b/module_login/build.gradle
@@ -10,6 +10,7 @@ android {
 
 
     defaultConfig {
+        multiDexEnabled true
         //applicationId "com.example.module_common"
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
@@ -75,6 +76,9 @@ dependencies {
 
 
     testImplementation 'junit:junit:4.13.2'
+
+    implementation 'com.android.support:multidex:1.0.3'
+
 
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
