--- a/module_common/src/main/AndroidManifest.xml
+++ b/module_common/src/main/AndroidManifest.xml
@@ -3,12 +3,15 @@
     package="com.example.module_common">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Qyh_practice" />
+        android:theme="@style/Theme.Qyh_practice">
+
+    </application>
 
 </manifest>
