搭好了分页加载的大框架，详见README

--- a/module_recommend/build.gradle
+++ b/module_recommend/build.gradle
@@ -76,6 +76,8 @@ dependencies {
     api rootProject.ext.paging3.paging_common
     api rootProject.ext.paging3.paging_compose
 
+    api rootProject.ext.dependencies.glide
+
     implementation 'com.android.support:multidex:1.0.3'
     implementation project(path: ':module_common')
 
