--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -17,7 +17,7 @@ ext {
 
     ]
 
-
+    room_version = "2.3.0"
     gson_version = '2.8.5'
     lifecycle_version = "2.2.0"
     rxlifecycleVersion = "3.0.0"
@@ -72,7 +72,7 @@ ext {
 
             okHttp3                  : 'com.squareup.okhttp3:okhttp:3.7.0',
             okHttp3LoggingInterceptor: 'com.squareup.okhttp3:logging-interceptor:3.7.0',
-            okHttp3Integration       : 'com.github.bumptech.glide:okhttp3-integration:1.5.0@aar',
+
 
             gson                     : "com.google.code.gson:gson:${gson_version}",
 
