--- a/module_common/build.gradle
+++ b/module_common/build.gradle
@@ -66,7 +66,7 @@ dependencies {
 
     api rootProject.ext.dependencies["okHttp3"]
     api rootProject.ext.dependencies["okHttp3LoggingInterceptor"]
-    api rootProject.ext.dependencies["okHttp3Integration"]
+
 
     api rootProject.ext.dependencies["retrofit"]
     api rootProject.ext.dependencies["retrofitConvertGson"]
@@ -92,6 +92,11 @@ dependencies {
 
     implementation 'com.android.support:multidex:1.0.3'
 
+    implementation("androidx.room:room-runtime:$room_version")
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+
+
 
 
     testImplementation 'junit:junit:4.13.2'
@@ -103,6 +108,6 @@ dependencies {
     //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 repositories {
-
+    google()
     mavenCentral()
 }
