--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,24 +20,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Qyh_practice">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".module_login.LoginActivity">
 
 
         </activity>
 
         <activity
-            android:name=".SplashActivity"
+            android:name=".module_login.SplashActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-
-
-        </activity>
-
-        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+
+        <activity android:name=".MainActivity">
+
         </activity>
 
 
