--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -67,6 +67,8 @@ ext {
             retrofitConvertGson      : "com.squareup.retrofit2:converter-gson:$retrofit_version",
             retrofitAdapterRxJava    : "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version",
 
+            MMKV                     :" com.tencent:mmkv-static:1.0.23",
+
             zhenaiLibSecurity        : 'com.zhenai.lib:android-security:1.1.0',
 
 
