--- a/module_common/build.gradle
+++ b/module_common/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'kotlin-android'
 }
 
+apply plugin:'kotlin-kapt'
+
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
     buildToolsVersion rootProject.ext.android["build_tools_version"]
@@ -18,6 +20,11 @@ android {
         versionName rootProject.ext.android["versionName"]
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        kapt {
+            arguments {
+                arg ("AROUTER_MODULE_NAME", project.getName())
+            }
+        }
     }
 
     buildTypes {
@@ -76,27 +83,21 @@ dependencies {
     api rootProject.ext.dependencies["rxlifecycleComponents"]
     api rootProject.ext.dependencies["rxBinding"]
 
+    implementation 'com.tencent:mmkv-static:1.0.23'
 
     api rootProject.ext.dependencies.zhenaiLibSecurity
-    //api rootProject.ext.dependencies["refreshLayout"]
-    //api rootProject.ext.dependencies["refreshLayout_header"]
-//    api rootProject.ext.dependencies["refreshLayout_footer"]
 
 
 
     api rootProject.ext.dependencies["arouter_api"]
-    api rootProject.ext.dependencies["arouter_compiler"]
+    kapt rootProject.ext.dependencies["arouter_compiler"]
 
-//    api 'com.alibaba:arouter-api:1.5.2'
-//    api 'com.alibaba:arouter-compiler:1.5.2'
+    api 'org.greenrobot:eventbus:3.1.1'
 
     implementation 'com.android.support:multidex:1.0.3'
 
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor "androidx.room:room-compiler:$room_version"
-
-
-
 
 
     testImplementation 'junit:junit:4.13.2'
