--- a/module_login/build.gradle
+++ b/module_login/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'kotlin-android'
 }
 
+apply plugin:'kotlin-kapt'
+
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
     buildToolsVersion rootProject.ext.android["build_tools_version"]
@@ -18,6 +20,11 @@ android {
         versionName rootProject.ext.android["versionName"]
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        kapt {
+            arguments {
+                arg ("AROUTER_MODULE_NAME", project.getName())
+            }
+        }
     }
 
     buildTypes {
@@ -25,6 +32,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    buildFeatures {
+        viewBinding = true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -44,9 +54,14 @@ dependencies {
     api rootProject.ext.ktx["livedata"]
     api rootProject.ext.ktx["viewmodel"]
     api rootProject.ext.ktx["lifecycle"]
+    api rootProject.ext.ktx["activity"]
+    api rootProject.ext.ktx["fragment"]
+
 
     api rootProject.ext.ktx["appcompat"]
     //implementation 'androidx.appcompat:appcompat:1.2.0'
+
+    implementation 'com.tencent:mmkv-static:1.0.23'
 
 
     api rootProject.ext.dependencies["material"]
@@ -66,13 +81,9 @@ dependencies {
     api rootProject.ext.dependencies["rxlifecycleComponents"]
     api rootProject.ext.dependencies["rxBinding"]
 
+    kapt rootProject.ext.dependencies["arouter_compiler"]
 
-    api rootProject.ext.dependencies["arouter_api"]
-    api rootProject.ext.dependencies["arouter_compiler"]
-    implementation project(path: ':module_common')
-
-//    api 'com.alibaba:arouter-api:1.5.2'
-//    api 'com.alibaba:arouter-compiler:1.5.2'
+    api project(path: ':module_common')
 
 
     testImplementation 'junit:junit:4.13.2'
