--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Qyh_practice">
+        android:theme="@style/Theme.Qyh_practice"
+        android:usesCleartextTraffic="true">
         <activity android:name=".module_login.LoginActivity">
 
 
@@ -28,17 +28,14 @@
         <activity
             android:name=".module_login.SplashActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-
-
-        </activity>
-
-        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
+        <activity android:name=".MainActivity" />
 
 
     </application>
