--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,22 +20,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Qyh_practice"
         android:usesCleartextTraffic="true">
-        <activity android:name=".module_login.LoginActivity">
 
+
+        <activity android:name=".module_login.LoginActivity">
 
         </activity>
 
         <activity
             android:name=".module_login.SplashActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+
+
+        </activity>
+
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
-        <activity android:name=".MainActivity" />
 
 
     </application>
